--- a/styles.css
+++ b/styles.css
@@ -37,15 +37,25 @@ header {
   transition: color 0.3s;
 }
 
-ul > a {
+ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  list-style-type: none;
+  
+}
+
+ul > li > a {
   color: black;
   text-decoration: none;
   font-size: 1.2rem;
   margin: 0 0.2rem;
   transition: 0.3s;
+  margin: 0 1rem;
+  
 }
 
-ul > a:hover {
+ul > li > a:hover {
   color: #8f8f8f;
 }
 
