--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ header {
   transition: color 0.3s;
 }
 
-ul {
+ol {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -45,7 +45,7 @@ ul {
   
 }
 
-ul > li > a {
+ol > li > a {
   color: black;
   text-decoration: none;
   font-size: 1.2rem;
@@ -55,7 +55,7 @@ ul > li > a {
   
 }
 
-ul > li > a:hover {
+ol > li > a:hover {
   color: #8f8f8f;
 }
 
